--- a/前端试题/1.md
+++ b/前端试题/1.md
@@ -254,13 +254,9 @@
     ```
     @media only screen and (max-width: 1024px) {argin: 0;}
     ```
-    A：
+    A：停止旧版本浏览器解析选择器的其余部分。
 
-    `only` 操作符表示仅在媒体查询匹配成功的情况下应用指定样式。可以通过它让选中的样式在老式浏览器中不被应用。若使用了 `not` 或 `only` 操作符，必须明确指定一个媒体类型。
-
-    停止旧版本浏览器解析选择器的其余部分。only 用来定某种特定的媒体类型，可以用来排除不支持媒体查询的浏览器。其实only很多时候是用来对那些不支持Media Query 但却支持Media Type 的设备隐藏样式表的。其主要有：支持媒体特性（Media Queries）的设备，正常调用样式，此时就当only 不存在；对于不支持媒体特性(Media Queries)但又支持媒体类型(Media Type)的设备，这样就会不读了样式，因为其先读only 而不是screen；另外不支持Media Queries 的浏览器，不论是否支持only，样式都不会被采用。
-
-    具体媒体查询的知识请参考：[CSS媒体查询](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Media_queries)
+    only 用来定某种特定的媒体类型，可以用来排除不支持媒体查询的浏览器。其实only很多时候是用来对那些不支持Media Query 但却支持Media Type 的设备隐藏样式表的。其主要有：支持媒体特性（Media Queries）的设备，正常调用样式，此时就当only 不存在；对于不支持媒体特性(Media Queries)但又支持媒体类型(Media Type)的设备，这样就会不读了样式，因为其先读only 而不是screen；另外不支持Media Qqueries 的浏览器，不论是否支持only，样式都不会被采用。
 
 21. Q:`overfloa:hidden` 是否形成新的块级格式化上下文？
 
@@ -283,7 +279,7 @@
     - display的值为table-cell, table-caption, inline-block 中的任何一个。
     - position的值不为relative 和static。
 
-22. Q: `screen` 关键词是指设备物理屏幕的大小还是指浏览器的视窗？
+22. Q: `screen`关键词是指设备物理屏幕的大小还是指浏览器的视窗？
 
     ```
     @media only screen and (max-width: 1024px) {margin: 0;}
@@ -353,4 +349,4 @@ tips:根据以上考点总结下如下知识点，后期会写文章进行总结
     + [理解BFC(Block Formatting Context)](http://jqc.me/?p=68)
 
 
-  - margin，padding 相关的知识可以参考查阅《CSS权威指南》
+  - margin，padding相关的知识可以参考查阅《CSS权威指南》
