--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -9,18 +9,14 @@
 
 * A: 你在昨天/本周学到了什么？
 
-<!--   Q: 关于CSS 的一些基础知识。对CSS 盒子模型、padding、margin、以及替换元素、行内元素、行高等都有一个更加具象的认识。 -->
+
 
 * A: 编写代码的哪些方面能够使你兴奋或感兴趣？
 
-<!-- Q: 自己和产品设计师一起参与讨论设计产品，做出原型。拿到设计师的psd，结合自己的认识理解，给产品和设计师提出建议，最后实现出产品。一个从无到有的产品，从头到尾的参与。 -->
 
 * A: 在制作一个Web应用或Web站点的过程中，你是如何考虑他的UI、安全性、高性能、SEO、可维护性以及技术因素的？
 
   Q:
-  <!--   UI方面来说，根据自己的认识，例如配色以及更好的交互效果。站在客户的角度，多考虑减去那些繁琐的操作，以及反人性的操作。和设计师商量，给实际是提出更好的意见，做出更好的web站点。
-  我了解的就是站点登陆加密，cookie等。 -->
-
   安全性：
     - [从“黑掉Github”学Web安全开发](http://coolshell.cn/articles/11021.html)
     - [零基础如何学习 Web 安全？](http://www.zhihu.com/question/21606800)
@@ -38,9 +34,6 @@
   SEO：
     - [SEO在网页制作中的应用](http://www.imooc.com/learn/204)
 
-  <!--我了解的有title,description,keywords,标题，robots.txt,
-      <meta name="robots" content="index,follow">-->
-  <!--   可维护性： html结构，css结构，js结构，符合规范。制定团队统一规范。语义化。命名规范。在写网页时，组织html结构以及css时 考虑可维护性。例如说工作时去iframe，用命名空间。-->
 
 * A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
   Q:
@@ -58,12 +51,6 @@
 
 * A: 你能描述一下当你制作一个网页的工作流程吗？
   Q：
-  - 拿到设计师的psd,仔细看psd，结合需求文档，看清楚每一层，每一个结构。构思html 结构，以及CSS可共用的部分，交互效果用JS如何实现等,提出自己的疑问和顾虑，和设计师以及产品经理沟通，更好的实现。
-  - 代码实现，遇到具体细节，不确定的，以及觉得不够人性化的地方，和产品经理，设计师再讨论确定。
-  - 进入提测，根据测试工程师的反馈，修复bug。根据测试工程师提出的反馈，根据自己的思考，去和测试沟通。如果不确定的再和产品、设计师、测试一起确定。
-  - 最后外网测试，修复bug。
-
-  <!-- 要特别重视这一题 -->
 
 
 * A: 你能描述一下渐进增强和优雅降级之间的不同吗?
@@ -107,6 +94,79 @@
 
 * A: 请写一个简单的幻灯效果页面
     * 如果不使用JS来完成，可以加分。
+    ```
+    <!doctype htm l>
+    <html>
+      <head>
+        <style>
+        img {
+          display: none;
+          width: 100px;
+          height: 100px;
+        }
+        input:checked + img {
+          display: block;
+        }
+        input {
+          position: absolute;
+          left: -9999px;
+        }
+        label {
+          cursor: pointer;
+        }
+        </style>
+      </head>
+      <body>
+        <div id="cont">
+          <input id="img1" name="img" type="radio" checked="checked">
+          <img src="a.png">
+          <input id="img2" name="img" type="radio">
+          <img src="b.png">
+        </div>
+        <div id="nav">
+          <label for="img1">第一张</label>
+          <label for="img2">第二张</label>
+        </div>
+      </body>
+    </html>
+    ```
+
+    可以这样写，但是不能支持所有浏览器。
+
+    ```
+    <!DOCTYPE HTML>
+    <html>
+      <head>
+      <style>
+
+      #cont {
+      position: relative;
+      height: 100px;
+      }
+    img {
+          position: absolute;
+          width: 100px;
+          height: 100px;
+          z-index: 1;
+        }
+    img:first-child,
+    img:target {
+          z-index: 2;
+        }
+      </style>
+      </head>
+      <body>
+      <div id="cont">
+          <img id="img1" src="a.jpg">
+          <img id="img2" src="b.jpg">
+        </div>
+        <div>
+          <a href="#img1">one</a>
+          <a href="#img2">two</a>
+        </div>
+      </body>
+    </html>
+    ```
 
 * A: 你都使用哪些工具来测试代码的性能？
     * Profiler, JSPerf, Dromaeo
@@ -118,6 +178,8 @@
 * A: 请谈一下你对网页标准和标准制定机构重要性的理解。
 
 * A: 什么是 FOUC（无样式内容闪烁）？你如何来避免 FOUC？
+
+  Q: http://blog.csdn.net/laney1206/article/details/8591264
 
 * A: 请尽可能完整得描述下从输入URL到整个网页加载完毕及显示在屏幕上的整个流程
 
