--- a/前端试题/11.md
+++ b/前端试题/11.md
@@ -1,4 +1,4 @@
-* <cite>markyun<cite> [2014年最新前端开发面试题](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions) 和 [前端开发面试题](http://segmentfault.com/a/1190000000465431)
+摘自：* <cite>markyun<cite> [2014年最新前端开发面试题](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions) 和 [前端开发面试题](http://segmentfault.com/a/1190000000465431)
 * <cite>darcyclarke</cite>[Front-end-Developer-Interview-Questions](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions)
 
 ##1.get和post的区别##
