--- a/前端试题/7.md
+++ b/前端试题/7.md
@@ -225,13 +225,13 @@
 
 * Q: `==` 和 `===` 有什么不同？
 
-  A: `==`（相等运算法），`===`（严格相等运算符） JavaScript 对象的比较是引用的比较，非值的比较，对象和其本身相等，和其他任何对象不相等。 `===` 首先计算其操作数的值，然后比较，比较过程无任何类型转换。 `==` 如果两个操作数不是同一类型的，则相等运算符进行一些类型转换进行比较。 `==` 这里截取 JavaScript 相等表格上的的两张图片让大家更为直观的感受下。
+  A: `==`（相等运算法），`===`（严格相等运算符） JavaScript 对象的比较是引用的比较，非值的比较，对象和其本身相等，和其他任何对象不相等。 `===` 首先计算其操作数的值，然后比较，比较过程无任何类型转换。 `==` 如果两个操作数不是同一类型的，则相等运算符进行一些类型转换进行比较。 `==` 这里截取 [JavaScript 相等表格](http://dorey.github.io/JavaScript-Equality-Table)上的的两张图片让大家更为直观的感受下。
 
   ![](http://paddingme.qiniudn.com/1396461120383-2.png)
 
   ![](http://paddingme.qiniudn.com/1396464279990-1.png)
 
-  引用下[温特大大](http://weibo.com/wintercn)的总结就是：**只要记住 `null` 只和`undefined` 相等，有 `number` 都转 `number`，有 `boolean` 也转 `number`，有 `string` 都转 `string`，对象互相不等，`NaN`互相不等就可以了**。
+  引用下[温特大大](http://weibo.com/wintercn)的总结就是：**只要记住 `null` 只和`undefined` 相等，有 `number` 都转 `number`，有 `boolean` 也转 `number`，有 `string` 都转 `string`，对象互相不等，`NaN` 互相不等就可以了**。
 
 * 你如何从浏览器的 URL 中获取查询字符串参数。
 
