--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -173,7 +173,10 @@
 
 * A: Long-Polling, Websockets, SSE(Server-Sent Event) 之间有什么区别？
 
-* A: 请谈一下你对网页标准和标准制定机构重要性的理解。
+* Q: 请谈一下你对网页标准和标准制定机构重要性的理解。
+ A: “一次编码。随处运行”。
+
+  网页标准和标准制定机构都是为了能让web发展的更‘健康’，开发者遵循统一的标准，降低开发难度，开发成本，SEO也会更好做，也不会因为滥用代码导致各种BUG、安全问题，最终提高网站易用性。 摘自:<http://www.cnblogs.com/coco1s/p/4034937.html>
 
 * A: 什么是 FOUC（无样式内容闪烁）？你如何来避免 FOUC？
 
