--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -7,13 +7,13 @@
 
 ###常见问题：
 
-* A: 你在昨天/本周学到了什么？
+* Q: 你在昨天/本周学到了什么？
 
-* A: 编写代码的哪些方面能够使你兴奋或感兴趣？
+* Q: 编写代码的哪些方面能够使你兴奋或感兴趣？
 
-* A: 在制作一个Web应用或Web站点的过程中，你是如何考虑他的UI、安全性、高性能、SEO、可维护性以及技术因素的？
+* Q: 在制作一个Web应用或Web站点的过程中，你是如何考虑他的UI、安全性、高性能、SEO、可维护性以及技术因素的？
 
-  Q:
+  A:
   安全性：
     - [从“黑掉Github”学Web安全开发](http://coolshell.cn/articles/11021.html)
     - [零基础如何学习 Web 安全？](http://www.zhihu.com/question/21606800)
@@ -31,9 +31,9 @@
   SEO：
     - [SEO在网页制作中的应用](http://www.imooc.com/learn/204)
 
-* A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
+* Q: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
 
-  Q:
+  A:
   - **我要攒钱买MBPR**;
   - 操作系统：windows,linux;
   - 编辑器：Sublime Text,以前用过一段时间Vim,后来转到Sublime Text;
@@ -41,18 +41,19 @@
   - 工具：Photoshop,Eclipse,Fiddler 等;
   - 前端框架：Bootstarp，jQuery等。
 
-* A: 你最熟悉哪一套版本控制系统？
+* Q: 你最熟悉哪一套版本控制系统？
 
-  Q:
+  A:
   - Git
   - SVN
 
-* A: 你能描述一下当你制作一个网页的工作流程吗？
+* Q: 你能描述一下当你制作一个网页的工作流程吗？
 
 
-* A: 你能描述一下渐进增强和优雅降级之间的不同吗?
+* Q: 你能描述一下渐进增强和优雅降级之间的不同吗?
     * 如果提到了特性检测，可以加分。
-
+    
+   A:
       - [CSS “渐进增强”在web制作中常见应用举例](http://www.zhangxinxu.com/wordpress/2010/04/css-%E6%B8%90%E8%BF%9B%E5%A2%9E%E5%BC%BA%E5%9C%A8web%E5%88%B6%E4%BD%9C%E4%B8%AD%E5%B8%B8%E8%A7%81%E5%BA%94%E7%94%A8%E4%B8%BE%E4%BE%8B/)
       - [译)理解“渐进增强(Progressive Enhancement)”](http://ued.taobao.org/blog/2008/10/understanding-progressiveen-hancement-chs-translation/)
       - [認識優雅降級與漸進增強](http://augus-blog.logdown.com/posts/143403-graceful_degradation_and_progressive_enhancement)
@@ -62,9 +63,9 @@
       - [http://www.w3cfuns.com/blog-5426413-5396597.html](http://www.w3cfuns.com/blog-5426413-5396597.html)
       - [渐进增强和优雅降级之间的有什么不同？](http://segmentfault.com/q/1010000000264469)
 
-* A: 请解释一下什么是“语义化的 HTML”。
+* Q: 请解释一下什么是“语义化的 HTML”。
 
-  Q:
+  A:
   - [如何理解 web 语义化](http://www.zhihu.com/question/20455165)
   - [关于HTML语义化的一些理解](http://www.cnblogs.com/season-huang/p/3548514.html)
   - [再谈语义化](http://ued.ctrip.com/blog/?p=2735)
@@ -72,7 +73,7 @@
   - [关于Web语义化—张振强](http://studio.ewe.com.cn/?p=455)
   - [语义化标签规范](http://hikejun.com/work/qq/spec/html_reference.html)
 
-* A: 你如何对网站的文件和资源进行优化？
+* Q: 你如何对网站的文件和资源进行优化？
     * 期待的解决方案包括：
         * 文件合并
         * 文件最小化/文件压缩
@@ -80,17 +81,17 @@
         * 缓存的使用
         * 其他
 
-* A: 为什么利用多个域名来提供网站资源会更有效？
+* Q: 为什么利用多个域名来提供网站资源会更有效？
     * 浏览器同一时间可以从一个域名下载多少资源？
 
-* A: 请说出三种减少页面加载时间的方法。（加载时间指感知的时间或者实际加载时间）
+* Q: 请说出三种减少页面加载时间的方法。（加载时间指感知的时间或者实际加载时间）
 
-* A: 如果你参与到一个项目中，发现他们使用 Tab 来缩进代码，但是你喜欢空格，你会怎么做？
+* Q: 如果你参与到一个项目中，发现他们使用 Tab 来缩进代码，但是你喜欢空格，你会怎么做？
     * 建议这个项目使用像 EditorConfig (http://editorconfig.org/) 之类的规范
     * 为了保持一致性，接受项目原有的风格
     * 直接使用 VIM 的 retab 命令
 
-* A: 请写一个简单的幻灯效果页面
+* Q: 请写一个简单的幻灯效果页面
     * 如果不使用JS来完成，可以加分。
     ```
     <!doctype htm l>
@@ -166,24 +167,24 @@
     </html>
     ```
 
-* A: 你都使用哪些工具来测试代码的性能？
+* Q: 你都使用哪些工具来测试代码的性能？
     * Profiler, JSPerf, Dromaeo
 
-* A: 如果今年你打算熟练掌握一项新技术，那会是什么？
+* Q: 如果今年你打算熟练掌握一项新技术，那会是什么？
 
-* A: Long-Polling, Websockets, SSE(Server-Sent Event) 之间有什么区别？
+* Q: Long-Polling, Websockets, SSE(Server-Sent Event) 之间有什么区别？
 
 * Q: 请谈一下你对网页标准和标准制定机构重要性的理解。
- A: “一次编码。随处运行”。
 
-  网页标准和标准制定机构都是为了能让web发展的更‘健康’，开发者遵循统一的标准，降低开发难度，开发成本，SEO也会更好做，也不会因为滥用代码导致各种BUG、安全问题，最终提高网站易用性。 摘自:<http://www.cnblogs.com/coco1s/p/4034937.html>
+ A: “一次编码。随处运行”。  
+ 网页标准和标准制定机构都是为了能让web发展的更‘健康’，开发者遵循统一的标准，降低开发难度，开发成本，SEO也会更好做，也不会因为滥用代码导致各种BUG、安全问题，最终提高网站易用性。 摘自:<http://www.cnblogs.com/coco1s/p/4034937.html>
 
-* A: 什么是 FOUC（无样式内容闪烁）？你如何来避免 FOUC？
+* Q: 什么是 FOUC（无样式内容闪烁）？你如何来避免 FOUC？
 
-  Q: http://blog.csdn.net/laney1206/article/details/8591264
+  A: http://blog.csdn.net/laney1206/article/details/8591264
 
 
-* A: 请尽可能完整得描述下从输入URL到整个网页加载完毕及显示在屏幕上的整个流程
+* Q: 请尽可能完整得描述下从输入URL到整个网页加载完毕及显示在屏幕上的整个流程
 
 
 
