--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -52,16 +52,33 @@
 
 * Q: 你能描述一下渐进增强和优雅降级之间的不同吗?
     * 如果提到了特性检测，可以加分。
-    
-   A:
-      - [CSS “渐进增强”在web制作中常见应用举例](http://www.zhangxinxu.com/wordpress/2010/04/css-%E6%B8%90%E8%BF%9B%E5%A2%9E%E5%BC%BA%E5%9C%A8web%E5%88%B6%E4%BD%9C%E4%B8%AD%E5%B8%B8%E8%A7%81%E5%BA%94%E7%94%A8%E4%B8%BE%E4%BE%8B/)
-      - [译)理解“渐进增强(Progressive Enhancement)”](http://ued.taobao.org/blog/2008/10/understanding-progressiveen-hancement-chs-translation/)
-      - [認識優雅降級與漸進增強](http://augus-blog.logdown.com/posts/143403-graceful_degradation_and_progressive_enhancement)
-      - [优雅降级和渐进增强](http://hanazawakana.iteye.com/blog/1711556)
-      - [渐进增强、优雅降级](http://blog.csdn.net/xiongzhengxiang/article/details/7999525)
-      - [理解前端开发中的优雅降级及渐进增强](http://www.biaodianfu.com/graceful-degradation-progressive-enhancement.html)
-      - [http://www.w3cfuns.com/blog-5426413-5396597.html](http://www.w3cfuns.com/blog-5426413-5396597.html)
-      - [渐进增强和优雅降级之间的有什么不同？](http://segmentfault.com/q/1010000000264469)
+
+  A:
+  - 渐进增强(progressive enhancement)：针对低版本浏览器进行构建页面，保证最基本的功能，然后再针对高级浏览器进行效果、交互等改进和追加功能达到更好的用户体验。
+  - 优雅降级(graceful degradation)：一开始就构建完整的功能，然后再针对低版本浏览器进行兼容。
+
+
+　区别：优雅降级是从复杂的现状开始，并试图减少用户体验的供给，而渐进增强则是从一个非常基础的，能够起作用的版本开始，并不断扩充，以适应未来环境的需要。降级（功能衰减）意味着往回看；而渐进增强则意味着朝前看，同时保证其根基处于安全地带。　
+  “优雅降级”观点
+
+　“优雅降级”观点认为应该针对那些最高级、最完善的浏览器来设计网站。而将那些被认为“过时”或有功能缺失的浏览器下的测试工作安排在开发周期的最后阶段，并把测试对象限定为主流浏览器（如 IE、Mozilla 等）的前一个版本。
+
+　在这种设计范例下，旧版的浏览器被认为仅能提供“简陋却无妨 (poor, but passable)” 的浏览体验。你可以做一些小的调整来适应某个特定的浏览器。但由于它们并非我们所关注的焦点，因此除了修复较大的错误之外，其它的差异将被直接忽略。
+
+　“渐进增强”观点
+
+　“渐进增强”观点则认为应关注于内容本身。
+
+　内容是我们建立网站的诱因。有的网站展示它，有的则收集它，有的寻求，有的操作，还有的网站甚至会包含以上的种种，但相同点是它们全都涉及到内容。这使得“渐进增强”成为一种更为合理的设计范例。这也是它立即被 Yahoo! 所采纳并用以构建其“分级式浏览器支持 (Graded Browser Support)”策略的原因所在
+
+    - [CSS “渐进增强”在web制作中常见应用举例](http://www.zhangxinxu.com/wordpress/2010/04/css-%E6%B8%90%E8%BF%9B%E5%A2%9E%E5%BC%BA%E5%9C%A8web%E5%88%B6%E4%BD%9C%E4%B8%AD%E5%B8%B8%E8%A7%81%E5%BA%94%E7%94%A8%E4%B8%BE%E4%BE%8B/)
+    - [译)理解“渐进增强(Progressive Enhancement)”](http://ued.taobao.org/blog/2008/10/understanding-progressiveen-hancement-chs-translation/)
+    - [認識優雅降級與漸進增強](http://augus-blog.logdown.com/posts/143403-graceful_degradation_and_progressive_enhancement)
+    - [优雅降级和渐进增强](http://hanazawakana.iteye.com/blog/1711556)
+    - [渐进增强、优雅降级](http://blog.csdn.net/xiongzhengxiang/article/details/7999525)
+    - [理解前端开发中的优雅降级及渐进增强](http://www.biaodianfu.com/graceful-degradation-progressive-enhancement.html)
+    - [http://www.w3cfuns.com/blog-5426413-5396597.html](http://www.w3cfuns.com/blog-5426413-5396597.html)
+    - [渐进增强和优雅降级之间的有什么不同？](http://segmentfault.com/q/1010000000264469)
 
 * Q: 请解释一下什么是“语义化的 HTML”。
 
@@ -83,6 +100,7 @@
 
 * Q: 为什么利用多个域名来提供网站资源会更有效？
     * 浏览器同一时间可以从一个域名下载多少资源？
+    * 
 
 * Q: 请说出三种减少页面加载时间的方法。（加载时间指感知的时间或者实际加载时间）
 
