--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -204,18 +204,9 @@
 
 * Q: 请尽可能完整得描述下从输入URL到整个网页加载完毕及显示在屏幕上的整个流程
 
-
-
-
-
-
-
-
-
-
-
-
-
+ A:
+  - [从输入 URL 到页面加载完成的过程中都发生了什么事情？](http://fex.baidu.com/blog/2014/05/what-happen/)
+  - [从FE的角度上再看输入url后都发生了什么](http://div.io/topic/609)
 
 
 
