--- a/前端试题/4.md
+++ b/前端试题/4.md
@@ -208,6 +208,7 @@
   - [从输入 URL 到页面加载完成的过程中都发生了什么事情？](http://fex.baidu.com/blog/2014/05/what-happen/)
   - [从FE的角度上再看输入url后都发生了什么](http://div.io/topic/609)
   - [当你输入一个网址，实际会发生什么?](http://blog.jobbole.com/33951/)
+  - [从输入 URL 到页面加载完的过程中都发生了什么事情 —— 网络优化篇](http://oilbeater.com/%E6%8A%80%E6%9C%AF%E7%9B%B8%E5%85%B3/2014/05/09/from-url-to-webpage.html)
 
 
 
