--- a/前端试题/3.md
+++ b/前端试题/3.md
@@ -16,7 +16,6 @@
 一般来说会问如下几方面的问题：
 
 * 做过最满意的项目是什么？
-  A: 没有最满意的项目。。。平板教学网站  积累了很多经验。
 * 项目背景
     * 为什么要做这件事情？
     * 最终达到什么效果？
@@ -33,7 +32,7 @@
 * 是否有设计过通用的组件？
     * 请设计一个 Dialog（弹出层） / Suggestion（自动完成） / Slider（图片轮播） 等组件
     * 你会提供什么接口？
-    * 调用过程是怎样的？可能会遇到什么细节问题？ 没有！
+    * 调用过程是怎样的？可能会遇到什么细节问题？
 * 更细节的问题推荐参考 <https://github.com/darcyclarke/Front-end-Developer-Interview-Questions/>
 
 ### 技术相关 - 2 面
