:memo: :pencil2: :construction: update docs

--- a/questions/1.md
+++ b/questions/1.md
@@ -1,18 +1,19 @@
 
-## [Front End Web Development Quiz](http://davidshariff.com/quiz/) CSS 部分问题与解答
+## CSS 部分问题与解答
+
+
+这里是 [Front End Web Development Quiz](http://davidshariff.com/quiz/) 中的 CSS部分问题与解答.
 
 1. Q: CSS 属性是否区分大小写？
 
-    ```
-    ul {
-        MaRGin: 10px;
-    }
-    ```
-
-    A: 不区分。
-
-    HTML，CSS都对大小写不敏感，但为了更好的可读性和团队协作一般都小写，而在XHTML 中元素名称和属性是必须小写的。
-
+        ```
+        ul {
+            MaRGin: 10px;
+        }
+        ```
+        
+     A: 不区分。
+     HTML，CSS都对大小写不敏感，但为了更好的可读性和团队协作一般都小写，而在XHTML 中元素名称和属性是必须小写的。
 
 2. Q: 行内(inline)元素 设置`margin-top`和`margin-bottom` 是否起作用？
 
@@ -287,7 +288,9 @@
     A: 浏览器视窗
 
 
-## 知识点总结：
+## 知识点总结
+
+
 tips:根据以上考点总结下如下知识点，后期会写文章进行总结，这里只挑出重点进行解析。
 
   -  关于CSS选择器以及优先级的知识可查阅如下文章：
