--- a/questions/11.md
+++ b/questions/11.md
@@ -1,7 +1,4 @@
-摘自：* <cite>markyun<cite> [2014年最新前端开发面试题](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions) 和 [前端开发面试题](http://segmentfault.com/a/1190000000465431)
-* <cite>darcyclarke</cite>[Front-end-Developer-Interview-Questions](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions)
-
-##1.get和post的区别##
+## 1.get和post的区别##
 
  * get向指定的资源请求数据,请求的数据会附在URL之后,就是把数据放置在请求行（request line）中），以?分割URL和传输数据，多个参数用&连接；
  * post向指定的资源提交要被处理的数据
@@ -22,7 +19,7 @@
    ②. 对于post来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post请求的数据封装在http请求的首部里。
 
 
-##2. HTTP 状态码##
+## 2. HTTP 状态码##
 
   * `1XX`代表请求已经被接收；
   * `2xx`代表请求已成功被服务器接收、理解、并接受。常用的200表示请求已成功，请求所希望的响应头或数据体将随此响应返回；
@@ -30,7 +27,7 @@
   * `4xx`代表客户端错误。404表示网页不存在。
   * `5xx`代表服务器错误。500表示服务器内部错误，503表示服务器暂时不可用
 
-##3.前端MVC框架##
+## 3.前端MVC框架##
  MVC（模型-视图-控制器）
  Model(模型)主要与业务数据有关。
  View(视图)是关于构件和维护一个DOM元素。应用程序数据的可视化表示。
@@ -39,45 +36,45 @@
  如[知乎](http://www.zhihu.com/question/20135390)，把数据请求和数据操作放在model中，对视图的操作和改变放在view中，事件绑定放在controller中。
   
 
-##4.闭包##
+## 4.闭包##
    请见[隔壁](http://padding.me/blog/2014/04/20/what-is-closure/)。
 
-##5.DOCTYPE的作用？严格模式与混杂模式如何区分？它们有什么意义？
+## 5.DOCTYPE的作用？严格模式与混杂模式如何区分？它们有什么意义？
  DOCTYPE声明位于HTML文档顶端，告诉浏览器应该用什么文档类型规范来解析这个文档；
  严格模式的排版和JS运作模式是以该浏览器支持的最高标准运行；而混杂模式中，页面以较宽松的向后兼容的模式显示。模拟老式浏览器的行为以防止站点无法工作。
 ；DOCTYPE不存在或者格式不正确，则浏览器以混杂模式呈现文档。
 
-##6.行内元素有哪些？块级元素有哪些？空（void  )元素有哪些？##
+## 6.行内元素有哪些？块级元素有哪些？空（void  )元素有哪些？##
 
-##7.link和@import的区别 ##
+## 7.link和@import的区别 ##
 
-##8.浏览器的内核分别是什么 ##
+## 8.浏览器的内核分别是什么 ##
 
-##9.常见兼容性问题 ##
+## 9.常见兼容性问题 ##
  * 浏览器的`padding`和`marigin`不同。
 
-##10.语义化的理解 ##
+## 10.语义化的理解 ##
 
-##11.HTML5的离线存储 ##
+## 11.HTML5的离线存储 ##
  localStorage 长期存储数据，浏览器关闭后数据不丢失；而sessionStorage数据在浏览器关闭后自动删除。
 
-##12.cookie和session的区别##
+## 12.cookie和session的区别##
   ① cookie数据存在客户的浏览器上，session数据存放在服务器端
   ② cookie不安全
   ③ session会在一定时间内保存在服务器端，访问增多，占用服务器性能。
   ④ 单个cookie保存的数据不超过4K
 
-##13.(写)描述一段语义的html代码吧。##
+## 13.(写)描述一段语义的html代码吧。##
 
-##14.frame有那些缺点？##
+## 14.frame有那些缺点？##
 
-##15.请描述一下 cookies，sessionStorage 和 localStorage 的区别？##
+## 15.请描述一下 cookies，sessionStorage 和 localStorage 的区别？##
 cookie在浏览器和服务器间来回传递。 sessionStorage和localStorage不会
 sessionStorage和localStorage的存储空间更大；
 sessionStorage和localStorage有更多丰富易用的接口；
 sessionStorage和localStorage各自独立的存储空间；
 
-##16.介绍一下CSS的盒子模型？
+## 16.介绍一下CSS的盒子模型？
 
   ① 有两种， IE 盒子模型、标准 W3C 盒子模型；IE的content部分包含了 border 和 padding;
 
@@ -86,5 +83,9 @@ sessionStorage和localStorage各自独立的存储空间；
 ##17.CSS 选择符有哪些？哪些属性可以继承？优先级算法如何计算？ CSS3新增伪类有那些？##
 !important>id>class>tag
 
-##18.如何居中div？如何居中一个浮动元素？ ##
+## 18.如何居中div？如何居中一个浮动元素？ ##
 
+摘自：
+
+* <cite>markyun<cite> [2014年最新前端开发面试题](https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions) 和 [前端开发面试题](http://segmentfault.com/a/1190000000465431)
+* <cite>darcyclarke</cite>[Front-end-Developer-Interview-Questions](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions)
