--- a/questions/2.md
+++ b/questions/2.md
@@ -1,4 +1,6 @@
-## [Front End Web Development Quiz](http://davidshariff.com/quiz/) HTML 部分问题与解答
+## HTML 部分问题与解答
+
+这里是 [Front End Web Development Quiz](http://davidshariff.com/quiz/)HTML 部分问题与解答
 
 1. Q: `<keygen>` 是正确的HTML5标签吗？
 
@@ -145,7 +147,8 @@
 
     A: yes!
 
-## 知识点总结：
+## 知识点总结
+
   - 浏览器如何渲染，可以查阅如下文章：
     + [浏览器的渲染原理简介](http://coolshell.cn/articles/9666.html)
     + [专题：浏览器:渲染重绘、重排两三事](http://developer.51cto.com/art/201311/418133.htm)
