--- a/questions/4.md
+++ b/questions/4.md
@@ -1,4 +1,4 @@
-## [前端工作面试常见问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#general)
+# [前端工作面试常见问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#general)
 
 **备注**: [Rebecca Murphey](http://rmurphey.com/) 的 [Baseline For Front-End Developers](http://rmurphey.com/blog/2012/04/12/a-baseline-for-front-end-developers/) 是你在准备面试前应该阅读的绝佳资源。
 
