--- a/questions/5.md
+++ b/questions/5.md
@@ -1,4 +1,4 @@
-## [前端工作面试HTML相关问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#html)
+# [前端工作面试HTML相关问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#html)
 
 * Q: `doctype`（文档类型）的作用是什么？
 
