--- a/questions/7.md
+++ b/questions/7.md
@@ -1,4 +1,4 @@
-## [前端工作面试 JS 相关问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#js)
+# [前端工作面试 JS 相关问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#js)
 
 * Q：解释下事件代理。
 
